[gd_scene load_steps=7 format=1]

[ext_resource path="res://obstacle/laser/laser.gd" type="Script" id=1]
[ext_resource path="res://obstacle/laser/LazerPhysicalBody.gd" type="Script" id=2]
[ext_resource path="res://obstacle/laser/laser.png" type="Texture" id=3]
[ext_resource path="res://obstacle/laser/laser_anim.tres" type="Animation" id=4]
[ext_resource path="res://obstacle/laser/LazerTimer.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 0.50198, 34.8979 )

[node name="Laser" type="Node2D"]

transform/scale = Vector2( 200, 1 )
script/script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

transform/pos = Vector2( -0.0182991, 0 )
transform/rot = 180.0
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.498382, 34.907 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]

transform/scale = Vector2( 1, 10 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 0.498382, 34.907 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/shoot = ExtResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="laser_random_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 30.0
one_shot = false
autostart = true
script/script = ExtResource( 5 )

[node name="laser_timeout_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="timeout" from="laser_random_timer" to="laser_random_timer" method="_on_timeout"]

[connection signal="timeout" from="laser_timeout_timer" to="." method="stop_shooting"]


